@@ -26,7 +26,7 @@ SET (PACKAGE_VERSION_MINOR ${CMAKE_MATCH_2} )
 
 IF(NOT BUILD_INFO)
   SET(BUILD_INFO "Custom build" CACHE STRING
-    "Optional additional information about this specific build.  Examples might be: \"Official macOS build\", or \"Debian/Ubuntu package build\"."
+    "Optional additional information about this specific build.  Examples might be: \"Official macOS build\", or \"Debian package build\"."
   FORCE)
 ENDIF(NOT BUILD_INFO)
 SET (PACKAGE_BUILD_STRING "${PACKAGE_STRING} (${BUILD_INFO})")
