@@ -36,6 +36,9 @@ Version 7.2  [ (to be determined) ]
             - New constructor to build the empty surface.
         Class TableView:
             - New class to help wrap read-only multi-dimensional arrays.
+        Function buildInfo():
+            - New function that allows packagers to embed additional
+              version/build-related information in the calculation engine.
     PYTHON:
         - Updated the included pybind11 library from 2.8.1 to 2.10.0.
           This means we can now support Python 3.11, but no longer support
